--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -11,7 +11,7 @@
         meta:
           container: '{{ geth_source_cont_name | mandatory }}'
         checks:
-          - id: '{{ geth_expo_consul_name }}'-health
+          - id: '{{ geth_expo_consul_name }}-health'
             name: 'geth-exporter healthcheck'
             type: http
             http: 'http://localhost:{{ geth_expo_cont_port }}/health'
