--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -1,18 +1,24 @@
 ---
-- name: 'Start container: {{ geth_expo_cont_name }}'
-  docker_container:
-    name: '{{ geth_expo_cont_name }}'
-    image: '{{ geth_expo_cont_image }}'
-    user: root
-    pull: true
-    restart_policy: always
-    state: '{{ cont_state }}'
-    recreate: '{{ cont_recreate }}'
-    restart: '{{ cont_restart }}'
-    entrypoint: geth_exporter 
-    volumes_from: '{{ geth_source_cont_name | mandatory }}'
-    command: |
-      -ipc {{ geth_source_cont_ipc_path }}
-      -port 9200
-    ports:
-      - '{{ geth_expo_cont_port }}:9200/tcp'
+- name: Create compose file
+  template:
+    src: 'docker-compose.yml.j2'
+    dest: '{{ geth_expo_compose_path }}'
+    owner: 'dockremap'
+    group: 'docker'
+    mode: 0640
+
+# Take into account additional docker-compose.yml files.
+- name: Find all Docker Compose files
+  find:
+    paths: '{{ geth_expo_service_path }}'
+    patterns: 'docker-compose*.yml'
+    recurse: false
+  register: geth_expo_all_compose
+
+- name: Create containers
+  docker_compose:
+    project_src: '{{ geth_expo_service_path }}'
+    files: '{{ geth_expo_all_compose.files | map(attribute="path") | list }}'
+    state: '{{ compose_state }}'
+    restarted: '{{ compose_restart }}'
+    recreate: '{{ compose_recreate | default("smart") }}'
