replace Tinc VPN with WireGuard
https://github.com/status-im/infra-hq/issues/58

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -8,7 +8,7 @@
       - name: 'geth-exporter'
         id: '{{ geth_expo_cont_name }}'
         port: '{{ geth_expo_cont_port }}'
-        address: '{{ ansible_local.tinc.vpn_ip }}'
+        address: '{{ ansible_local.wireguard.vpn_ip }}'
         tags: ['{{ geth_expo_cont_name }}', 'metrics', 'geth']
         meta:
           container: '{{ geth_expo_source_cont_name | mandatory }}'
