--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,18 @@ geth_expo_cont_name: '{{ geth_expo_service_name }}-exporter'
 geth_expo_cont_addr: '0.0.0.0'
 geth_expo_cont_port: 9200
 
+# Consul config
+geth_expo_consul_service_name: 'geth-exporter'
+geth_expo_consul_scope: 'main'
+geth_expo_consul_default_tags:
+  - 'geth'
+  - 'exporter'
+  - 'metrics'
+  - 'scope:{{ geth_expo_consul_scope }}'
+  - '{{ env }}.{{ stage }}'
+geth_expo_consul_extra_tags: []
+geth_expo_consul_tags: '{{ geth_expo_consul_default_tags + geth_expo_consul_extra_tags }}'
+
 # general container management
 compose_recreate: 'smart'
 compose_state: 'present'
