--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create Consul service definition
-  include_role: name=consul-service
+  include_role: name=infra-role-consul-service
   vars:
     consul_config_name: '{{ geth_expo_cont_name }}'
     consul_services:
