--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -16,9 +16,9 @@
   register: geth_expo_all_compose
 
 - name: Create containers
-  docker_compose:
+  community.docker.docker_compose_v2:
     project_src: '{{ geth_expo_service_path }}'
-    files: '{{ geth_expo_all_compose.files | map(attribute="path") | list }}'
-    state: '{{ compose_state }}'
-    restarted: '{{ compose_restart }}'
-    recreate: '{{ compose_recreate | default("smart") }}'
+    files:       '{{ geth_expo_all_compose.files | map(attribute="path") | list }}'
+    state:       '{{ compose_state }}'
+    recreate:    '{{ compose_recreate }}'
+    pull:        '{{ compose_pull }}'
